--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,6 @@
 * {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
+  margin: 0;
 }
 
 .navContainer {
@@ -8,29 +9,35 @@
   padding: 20px;
   box-shadow: 0 1px 3px -2px black;
   flex-wrap: wrap;
+  background-color: #003568;
+  color: aliceblue;
 }
 
 .nav-sections{
   display: flex;
   gap: 55px;
-  align-items: center;
-  
+  align-items: center;  
 }
 
 .nav-sections li {
   list-style: none;
   cursor: pointer;
 }
+
+.nav-sections li a{
+  text-decoration: none;
+  color: inherit;
+}
  
  .nav-sections li hr{
   border: none;
-  background-color: rgb(216, 71, 71);
+  background-color: rgb(231, 221, 221);
   height: 3px;
-  width: 80%;
+  width: 100%;
  }
 
  .login-btn{
-   border-radius: 75px;
+   border-radius: 10px;
    outline: none;
    padding: 10px 15px;
    border: solid black 2px;
