feat: Home Page almost complete - Renamed 'Products 1' to 'Shop' - Will Add a cart button displaying count of    items

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -31,6 +31,11 @@ body{
     margin: 5px;
 }
 
+.homepage button:hover{
+    background-color: #1d5e9a;
+    cursor: pointer;
+}
+
 .content{
     display: flex;
     flex-direction: row;
