feat: Added More Game Cards to Shop.jsx - still need to work on the css styling - Managed to add 6 game cards - still need to add responsive design

--- a/src/styles/gameCard.css
+++ b/src/styles/gameCard.css
@@ -6,11 +6,8 @@
 }
 
 .gameCards{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-
+ text-align: center;
+ margin: 10px;
 }
 
 .gameCards h2{
