--- a/src/styles/cartGames.css
+++ b/src/styles/cartGames.css
@@ -1,10 +1,30 @@
 .displayCards{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-template-rows: repeat(2, auto);
+  gap: 1rem;
 }
 .gameCardContainer{
-  
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+
+}
+h1{
+  text-align: center;
+}
+
+@media(max-width: 900px){
+  .displayCards{
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+  }
+}
+
+@media(max-width: 600px){
+  .displayCards{
+    grid-template-columns: repeat(1, 1fr);
+    gap: 1rem;
+  }
+
 }
