--- a/src/styles/consoleDetails.css
+++ b/src/styles/consoleDetails.css
@@ -1,3 +1,10 @@
+
+ body{
+    background-color: #f0f0f0;
+    margin: 0;
+    padding: 0;
+}
+
 .item-details{
     padding: 50px;
     display: flex;
@@ -10,6 +17,7 @@
     padding: 20px 45px;
     width: 500px;
 }
+
 .item-description h2{
     font-weight: bold;
 }
