--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -1,3 +1,11 @@
+.About-page{
+    padding: 20px;
+    background-color: #f0f0f0cf;
+}
+
+.About-page * {
+    color: #333;
+}
 
 .About-page h1, .valuesTitle h1{
     margin-top: 20px;
@@ -8,7 +16,7 @@
     border: none;
     height: 2px;
     width: 85%;
-    background-color: aliceblue;
+    background-color: #333;
     margin: 0 auto;
 }
 
