--- a/src/styles/consoleDetails.module.css
+++ b/src/styles/consoleDetails.module.css
@@ -1,8 +1,11 @@
 
- body{
-    background-color: #f0f0f0;
-    margin: 0;
-    padding: 0;
+.wrapper *{
+    color: #333;
+}
+
+.wrapper{
+   background-color: #f0f0f0;
+    min-height: 100vh;
 }
 
 .item-details{
@@ -10,7 +13,7 @@
     display: flex;
     flex-direction: row;
     gap: 20px;
-    justify-content: center;
+    justify-content: center;    
 }
 
 .item-description{
@@ -27,6 +30,12 @@
     height: 400px;
     width: 400px;
     border-radius: 5px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    transition: box-shadow 0.3s ease;
+}
+
+.item-details img:hover{
+    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.4);
 }
 
 .item-description p{
