--- a/src/styles/CartItem.module.css
+++ b/src/styles/CartItem.module.css
@@ -30,7 +30,7 @@
     text-decoration: none;
 }
 
-li{
+.gaming-consoles li{
     list-style: none;
     margin-top: 10px;
     flex: 0 1 calc(33.33% - 50px);
@@ -41,11 +41,11 @@ li{
     transition: box-shadow 0.3s ease;
 }
 
-li:hover{
+.gaming-consoles li:hover{
     box-shadow:  0px 6px 12px rgba(0, 0, 0, 0.4);
 }
 
-li img{
+.gaming-consoles li img{
     border-radius: 10px;
     height: auto;
     object-fit: cover;
