--- a/src/styles/consoleDetails.module.css
+++ b/src/styles/consoleDetails.module.css
@@ -57,6 +57,12 @@
     background-color: #0a3b69;
 }
 
+.item-description button:active{
+    background-color: #002b4f;
+    transform: scale(0.98);
+    box-shadow: 0px 3px 4px rgba( 0, 0, 0, 0.2);
+}
+
 .item-quantity{
     font-size: 1rem;
 }
