feat: Add Responsive layout to About.jsx
- used media queries to adjust screen size layout

--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -40,10 +40,28 @@
     object-fit: cover;
     width: 500px;
     height: auto;
-    max-width: 100%;
     margin-left: 50px;
 }
 
 .values img{
     margin-left: 120px;
+}
+
+@media (max-width: 1000px){
+    .mission, .values{
+        flex-direction: column;
+        gap: 20px;
+        align-items: center;
+    }
+
+    .mission img, .values img{
+        max-width: 400px; /* changed width to accomodate smaller screen size */
+        width: 100%;
+        margin-left: 0;
+    }
+
+    .mission h3, .values h3{
+        text-align: center;
+        margin-top: 10px;
+    }
 }
