--- a/src/styles/consoleDetails.module.css
+++ b/src/styles/consoleDetails.module.css
@@ -54,7 +54,7 @@
 }
 
 .item-description button:hover{
-    background-color: #0a3b69;
+    background-color: #0f4b82;
 }
 
 .item-description button:active{
