--- a/src/styles/cart.module.css
+++ b/src/styles/cart.module.css
@@ -23,6 +23,15 @@
     transition: background-color 0.3s ease;;
 }
 
+.removeBtn:hover, .clearBtn:hover{
+    background-color: rgb(229, 226, 226);
+}
+
+.removeBtn:active, .clearBtn:active{
+    transform: scale(0.98);
+    box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.2) ;
+}
+
 .clearBtn{
     background-color: white;
     border-radius: 12px;
