--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -50,17 +50,7 @@
    margin-right: 5px;
  }
 
- .signup-btn{
-  border-radius: 10px;
-  background-color: #003568;
-  outline: none;
-  padding: 10px 15px;
-  border: solid white 1px;
-  color: white;
- }
-
- .signIn-btn:hover,
- .signup-btn:hover{
+ .signIn-btn:hover{
   background-color: #1d5e9a;
   cursor: pointer;
  }
